Sep 11 2002  2.5.2  Added soundopts config file option per Mathias' suggestion
                    Implemented feature order in gpsmap
Sep 10 2002  2.5.2  Added more imagemagick exception catching/handling 
                     to gpsmap
                    Fixed silly typo for default image size in gpsmap
                    Fixed teraserver in gpsmap
                    Added extracting of size/scale from user map file names
                     in gpsmap.
                    Added two more manuf fingerprints from pr00f.
                    Fixed factory default network coloring in gpsmap
Sep 09 2002  2.5.2  Fixed longstanding minor bug in mac_addr, failed to zero
                     longmac in some situations leading to map collisions.
                    Fixed gpsmap not reading netxml files with libz
                    Fixed gpsmap not getting network names correctly
                    Fixed handling tracks under inverse filters in gpsmap
                    Changed channel color from white to dark grey in gpsmap
                    Fixed gpsmap default output name
                    Fixed gpsmap tracking
                    Removed track opacity option due to imagemagick limitations
                    Added expat.cc handling of blank CDP id's and lucent networks
                    Fixed some channel coloring in gpsmap
                    Added label gravity and other label fixes to gpsmap
                    Fixed label gravity/orientation
Sep 08 2002  2.5.2  First iteration of gpsmap rewriting.  Command line args are
                     COMPLETELY changed.  Expect full functionality to return
                     soon.
                    Fixed gpsmap conversion to greyscale
                    Added track opacity to gpsmap
Sep 05 2002  2.5.2  Fixed client scrolling
                    Added client info pane
                    Finished first iteration of client panels
                    Added total packets to statistics panel